# llm-systems-and-eval

./: .gitignore  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
eval_runner/: model.py  pyproject.toml  run_eval.py
eval_runner/custom_tasks/: logical_reasoning.json  logical_reasoning.yaml
eval_runner/results/: raw_20260301_161035.json  summary_20260301_161035.json
guardrails/: README.md  report.json  validate.py
improve/: eval.sh  infer.py  optimize_prompt.py  prepare_data.py  report.md
improve/predictions/: hellaswag_few_shot.json
perf/: analysis.ipynb  load_test.py  metrics.csv
serve/: client.py  serve.py
